<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robostats</string>
    <string name="hello_world">Welcome to Robostats</string>
    <string name="username_hint"> Your email or username    </string>
    <string name="password_hint"> Password      </string>
    <string name="action_settings">Settings</string>
    <string name="login_button">  Login  </string>
    <string name="class_title">Select a Class: </string>
    <string name="remote_title">Play!</string>
    <string name="up_button">Up</string>
    <string name="down_button">Down</string>
    <string name="right_button">Right</string>
    <string name="left_button">Left</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>

    <color name="orange">#EB5600</color>
    <color name="pinky">#E9A999</color>
    <color name="lemony">#EB8200</color>
    <color name="white">#FFFFFF</color>

</resources>
