<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/orange"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/remote_ttl"
        android:text="@string/remote_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="40dp"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/up_button"
        android:background="@color/pinky"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_above="@+id/right"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pinky"
        android:id="@+id/down"
        android:hint="@string/down_button"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/right"
        android:layout_alignLeft="@+id/up"
        android:layout_alignStart="@+id/up" />

    <Button
        android:id="@+id/right"
        android:background="@color/pinky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_button"
        android:layout_alignTop="@+id/left"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/up"
        android:layout_toEndOf="@+id/up" />

    <Button
        android:id="@+id/left"
        android:background="@color/pinky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/up"
        android:layout_toStartOf="@+id/up" />

    <Button
        android:background="@color/lemony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a"
        android:text="@string/a_button"
        android:layout_alignTop="@+id/b"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/remote_ttl"
        android:layout_toStartOf="@+id/remote_ttl" />

    <Button
        android:background="@color/lemony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b"
        android:text="@string/b_button"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/right"
        android:layout_alignEnd="@+id/right"
        android:layout_toRightOf="@+id/remote_ttl"
        android:layout_toEndOf="@+id/remote_ttl" />

</RelativeLayout>

