<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/orange"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:textColor="@color/white"
        android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        android:paddingBottom="40dp"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/main_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/username_login"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/pinky"
        android:background="@color/lemony"
        android:layout_below="@+id/password_login"
        android:layout_alignLeft="@+id/password_login"
        android:layout_alignStart="@+id/password_login"
        android:layout_marginTop="47dp" />


</RelativeLayout>
